# cvx

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: EnableCXX11.cmake  Functions.cmake
examples/: CMakeLists.txt  array.cpp  feature_extraction.cpp  find_contours.cpp  opencv_example.cpp  pitched_array.cpp
include/: cvx.hpp
include/cvx/: array_view.hpp  ccl.hpp  color.hpp  connected_component.hpp  convex_hull.hpp  draw.hpp  draw.inl  exception.hpp  export.hpp  feature_flag.hpp  point2.hpp  rectangle2.hpp  union_find.hpp  utils.hpp
include/cvx/detail/: area_extractor.hpp  bounding_box_extractor.hpp  ccl.hpp  centroid_extractor.hpp  contour.hpp  extent_extractor.hpp  extractor.hpp  point_extractor.hpp  twopass_label.hpp
src/cvx/: color.cpp  connected_component.cpp  draw.cpp  exception.cpp
src/cvx/detail/: area_extractor.cpp  bounding_box_extractor.cpp  centroid_extractor.cpp  extent_extractor.cpp  extractor.cpp  point_extractor.cpp
tests/: CMakeLists.txt  test_area_extraction.cpp  test_array_view.cpp  test_bounding_box_extraction.cpp  test_ccl4.cpp  test_ccl8.cpp  test_centroid_extraction.cpp  test_extent_extraction.cpp  test_point_extraction.cpp  test_rectangle2.cpp  valgrind_tests.sh
